--- a/style.css
+++ b/style.css
@@ -174,13 +174,10 @@ footer a {
 footer a:hover {
   color: #000;
 }
-
 .blog-post img {
-  width: 320px;
-  height: 180px;
+  width: 100%;
+  height: 200px;
   object-fit: cover;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  display: block;
   margin-top: 1rem;
 }
